changelogs when making a new release, docs/changelog.txt in the dfhack repo must
have the new release listed in the right place, even if no changes were made in
that repo.

Template for new versions:

## New Tools

## New Features

## Fixes

## Misc Improvements

## Removed

]]]

# Future

## New Tools

## New Features

## Fixes

## Misc Improvements

## Removed

# 50.12-r2

## New Tools
- `agitation-rebalance`: alter mechanics of irriation-related attacks so they are less constant and are more responsive to recent player bahavior
- `fix/ownership`: fix instances of multiple citizens claiming the same items, resulting in "Store owned item" job loops
- `fix/stuck-worship`: fix prayer so units don't get stuck in uninterruptible "Worship!" states
- `instruments`: provides information on how to craft the instruments used by the player civilization
- `modtools/item-trigger`: (reinstated) modder's resource for triggering scripted content when specific items are used
- `modtools/if-entity`: (reinstated) modder's resource for triggering scripted content depending on the race of the loaded fort
- `devel/block-borders`: (reinstated) highlights boundaries of map blocks or embark tile blocks
- `fix/noexert-exhaustion`: fix "Tired" NOEXERT units. Enabling via `gui/control-panel` prevents NOEXERT units from getting stuck in a "Tired" state

## New Features
- `gui/settings-manager`: add import, export, and autoload for work details
- `exterminate`: new "disintegrate" kill method that additionally destroys carried items
- `quickfort`: allow setting of workshop profile properties (e.g. labor, skill restrictions) from build blueprints

## Fixes
- `gui/launcher`: fix history scanning (Up/Down arrow keys) being slow to respond when in minimal mode
- `control-panel`: fix filtering not filtering when running the ``list`` command
- `gui/notify`: don't zoom to forbidden depots for merchants ready to trade notification
- `catsplosion`: only cause pregnancies in adults

## Misc Improvements